cambios en html

--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
 <body>
     <h1>Quiz Genérico</h1>
 
-    <div id="question-container" class="hide">
-        <div id="question">Question</div>
+    <<div class="quiz-container">
+    <div id="question">Cargando pregunta...</div>
+    <div id="answers"></div>
+    <button id="nextBtn" style="display:none;" type="button" class="btn btn-primary">Next</button>
+  </div>
 
-        <div id="answer-buttons"></div>
-    </div>
     <div class="controls">
-        <button id="start-btn"  type="button" class="btn btn-primary">Start</button>
         <button id="next-btn" class="hide">Next</button>
     </div>
 
