--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <h1>Quiz Genérico</h1>
 
     <<div class="quiz-container">
-    <div id="question">Cargando pregunta...</div>
+    <div id="question">Loading Question...</div>
     <div id="answers"></div>
     <button id="nextBtn" style="display:none;" type="button" class="btn btn-primary">Next</button>
   </div>
