--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <h1>Quiz Genérico</h1>
 
-    <<div class="quiz-container">
+    <div class="quiz-container">
     <div id="question">Loading Question...</div>
     <div id="answers"></div>
     <button id="nextBtn" style="display:none;" type="button" class="btn btn-primary">Next</button>
