--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,16 +9,19 @@
     <title>QUIZ</title>
 </head>
 <body>
-    <h1>Quiz Genérico</h1>
+    <h1>Quiz Game</h1>
+     <div id="start-screen">
+    <button id="startBtn">Start Quiz</button>
+  </div>
 
-    <div class="quiz-container">
-    <div id="question">Loading Question...</div>
+  <div id="quiz-container" class="hidden">
+    <h2 id="question"></h2>
     <div id="answers"></div>
-    <button id="nextBtn" style="display:none;" type="button" class="btn btn-primary">Next</button>
+    <button id="nextBtn" class="hidden">Next</button>
   </div>
 
     <div class="controls">
-        <button id="next-btn" class="hide">Next</button>
+        <button id="next-btn" class="hidden">Next</button>
     </div>
 
 
