--- a/index.html
+++ b/index.html
@@ -18,11 +18,10 @@
     <h2 id="question"></h2>
     <div id="answers"></div>
     <button id="nextBtn" class="hidden">Next</button>
+    <button id="restartBtn" class="hidden">Restart</button>
   </div>
 
-    <div class="controls">
-        <button id="next-btn" class="hidden">Next</button>
-    </div>
+    
 
 
     
