simplemente he cambiado el nombre de la clase de  hidden a hide

--- a/index.html
+++ b/index.html
@@ -16,16 +16,16 @@
         <button id="startBtn" type="button" class="btn btn-outline-primary">Start Quiz</button>
     </div>
         
-            <div id="quiz-container" class="hidden">
+            <div id="quiz-container" class="hide">
                <h2 id="question"></h2>
                <section class="wrapper">
                <div class="box">
                <div id="answers" class="answers-grid"></div>
                </div>
                </section>
-               <button id="startBtn" class="hidden">Start</button>
-               <button id="nextBtn" class="hidden">Next</button>
-              <button id="restartBtn" class="hidden">Restart</button>
+               <button id="startBtn" class="hide">Start</button>
+               <button id="nextBtn" class="hide">Next</button>
+              <button id="restartBtn" class="hide">Restart</button>
              </div>
         
 
