--- a/index.html
+++ b/index.html
@@ -19,17 +19,18 @@
         <button id="startBtn" type="button" class="btn btn-outline-primary">Start Quiz</button>
     </div>
         
-            <div id="quiz-container" class="hide">
-               <h2 id="question"></h2>
-               <section class="wrapper">
-               <div class="box">
-               <div id="answers" class="answers-grid"></div>
-               </div>
-               </section>
-               <button id="startBtn" class="hide">Start</button>
-               <button id="nextBtn" class="hide btn btn-outline-info">Next</button>
-              <button id="restartBtn" class="hide btn btn-outline-danger">Restart</button>
-             </div>
+    <div id="quiz-container" class="hide">
+        <h2 id="question"></h2>
+        <section class="wrapper">
+            <div class="box">
+                <div id="answers" class="answers-grid"></div>
+                <div id="counter"></div>
+            </div>
+        </section>
+        <button id="startBtn" class="hide">Start</button>
+        <button id="nextBtn" class="hide btn btn-outline-info">Next</button>
+        <button id="restartBtn" class="hide btn btn-outline-danger">Restart</button>
+    </div>
         
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="main.js"></script>
